css/style.css
/* ... */
.video-text {
  max-width: 30rem;
}

.connect {
  -webkit-clip-path: polygon(48% 0, 100% 11%, 100% 90%, 53% 100%, 0 91%, 0 11%);
  clip-path: polygon(48% 0, 100% 11%, 100% 90%, 53% 100%, 0 91%, 0 11%);
}

/*
=============== 
Skills
===============
*/
.skills {
  background-color: var(--clr-primary-10);
  margin-top: 5rem;
  position: relative;
  z-index: -2;
}

.skills h3 {
  color: var(--clr-primary-1);
  margin: 2rem 0;
}

.skill {
  margin-bottom: 1rem;
}

.skill p {
  text-transform: capitalize;
  color: var(--clr-primary-1);
  margin-bottom: 1rem;
}

.skill-container {
  background-color: var(--clr-white);
  height: 1rem;
  width: 100%;
  position: relative;
}

.skill-value {
  position: absolute;
  top: 0;
  left: 0;
  height: 1rem;
  width: 50%;
  background-color: var(--clr-primary-6);
  border-radius: var(--radius);
}

.skill-value-70 {
  width: 70%;
}

.skill-value-80 {
  width: 80%;
}

.skill-text {
  position: absolute;
  top: -2rem;
  left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

.skill-70 {
  left: 70%;
  -webkit-transform: translateX(-70%);
  transform: translateX(-70%);
}

.skill-80 {
  left: 80%;
  -webkit-transform: translateX(-80%);
  transform: translateX(-80%);
}

@media screen and (min-width: 768px) {
  .skills-center {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    -webkit-column-gap: 1.5rem;
    -moz-column-gap: 1.5rem;
    column-gap: 1.5rem;
  }
}
/*
=============== 
Timeline
===============
*/
.timeline-center {
  width: 80vw;
  max-width: 40rem;
}

.timeline-item {
  border-top: 2px dashed var(--clr-primary-5);
  margin-bottom: 0;
  padding: 2rem 1.5rem;
  position: relative;
  z-index: -2;
}

.timeline-item p {
  margin: 0;
}

.timeline-item:nth-child(even) {
  border-left: 2px dashed var(--clr-primary-5);
  border-top-left-radius: 2rem;
  border-bottom-left-radius: 2rem;
  margin-right: 2rem;
  padding-right: 0;
}

.timeline-item:nth-child(odd) {
  border-right: 2px dashed var(--clr-primary-5);
  border-top-right-radius: 2rem;
  border-bottom-right-radius: 2rem;
  margin-left: 2rem;
  padding-left: 0;
}

.timeline-item:first-child {
  border-top: 0;
  border-top-right-radius: 0;
}

.timeline-item:last-child {
  border-bottom: 0;
  border-bottom-left-radius: 0;
}

.number {
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  background-color: var(--clr-primary-5);
  color: var(--clr-primary-1);
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  display: grid;
  place-items: center;
  margin-bottom: 0;
  font-weight: bold;
}

.timeline-item:nth-child(even) .number {
  left: 0;
}

.timeline-item:nth-child(odd) .number {
  /* 
  Also works
  left: 100%; */

  right: 0;
  -webkit-transform: translate(50%, -50%);
  transform: translate(50%, -50%);
}
/*
=============== 
Blog
===============
*/

.blog {
  background-color: var(--clr-grey-10);
  position: relative;
  z-index: -2;
}

.card {
  position: relative;
  height: 27rem;
  -webkit-perspective: 1500px;
  perspective: 1500px;
  margin-bottom: 1.5rem;
}

.card-side {
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transition: all 2s linear;
  transition: all 2s linear;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: var(--radius);
  -webkit-transform: translate3d(0, 0, 0);
  visibility: visible;
}

.card-front {
  background-color: var(--clr-white);
}

.card-back {
  background-color: var(--clr-primary-10);
  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);
  display: grid;
  place-items: center;
}

.card:hover .card-front {
  -webkit-transform: rotateY(-180deg);
  transform: rotateY(-180deg);
}

.card:hover .card-back {
  -webkit-transform: rotateY(0);
  transform: rotateY(0);
}

.card-info {
  padding: 1rem 1.5rem;
}

.card-front img {
  height: 13rem;
  -o-object-fit: cover;
  object-fit: cover;
  border-top-left-radius: var(--radius);
  border-top-right-radius: var(--radius);
}

.card-footer {
  display: grid;
  grid-template-columns: auto 1fr;
  -webkit-box-align: center;
  align-items: center;
}

.card-footer img {
  width: 2rem;
  height: 2rem;
  -o-object-fit: cover;
  object-fit: cover;
  border-radius: 50%;
}

.card-footer p {
  text-transform: uppercase;
  margin-bottom: 0;
  justify-self: end;
  color: var(--clr-primary-6);
  font-size: 0.85rem;
}

.blog-center {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
  gap: 1rem;
}
/*
=============== 
Footer
===============
*/

.footer {
  background-color: #222;
  display: grid;
  place-items: center;
}

.footer .social-icons {
  margin-bottom: 2rem;
}

.footer .social-icon {
  color: var(--clr-primary-5);
}

.footer .social-icon:hover {
  color: var(--clr-primary-10);
}

.footer p {
  font-size: 1.25rem;
  color: var(--clr-white);
  text-transform: capitalize;
}
/*
=============== 
Single Page
===============
*/

.single-page {
  background-color: var(--clr-primary-10);
  min-height: 67.3vh;
}

.page-info {
  max-width: 700px;
}

.page-info a {
  color: var(--clr-primary-5);
  text-transform: capitalize;
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.page-info a:hover {
  color: var(--clr-primary-1);
}

/*
=============== 
Products Page
===============
*/

.projects-hero {
  height: 40vh;
  background-color: var(--clr-primary-10);
  display: grid;
  place-items: center;
}

.projects-hero .section-title {
  margin-bottom: 0;
}

.single-project {
  background-color: var(--clr-grey-10);
  border-radius: var(--radius);
}

.project-container img {
  border-top-left-radius: var(--radius);
  border-top-right-radius: var(--radius);
}

.project-container {
  position: relative;
  z-index: -3;
}
/* ... */

